--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@ htmlWebpackPlugin.options.cdn&&htmlWebpackPlugin.options.cdn.js) { %>
 <script src="<%= htmlWebpackPlugin.options.cdn.js[i] %>"></script>
 <% } %>
 <script src="./map/js/drag-move.js" type="text/javascript" charset="utf-8"></script>
+<script src="//webapi.amap.com/maps?v=1.4.15&key=0aa69f4ac7696ae5c4012d406ffd4125"></script>
 
 <!-- built files will be auto injected -->
 </body>
