--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no'/>
+  <link href='http://localhost:9000/bigemap.js/v2.1.0/bigemap.css' rel='stylesheet'/>
+
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
 
   <title>智慧营区安防管理平台</title>
@@ -12,10 +14,13 @@
 <noscript>
   <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 </noscript>
-<div id="app"></div>
-
 <script src="https://webapi.amap.com/maps?v=1.4.11&key=9de88a718781910c9a1c81230827d1ce&plugin=AMap.ControlBar"></script>
+<script src='http://localhost:9000/bigemap.js/v2.1.0/bigemap.js'></script>
+<script src='do.js'></script>
+<div id="app"></div>
+<script>
 
+</script>
 <!-- built files will be auto injected -->
 </body>
 </html>
