--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no'/>
-  <link href='http://localhost:9001/bigemap.js/v2.1.0/bigemap.css' rel='stylesheet'/>
+  <link href='http://192.168.0.131:9001/bigemap.js/v2.1.0/bigemap.css' rel='stylesheet'/>
 
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
 
@@ -14,7 +14,7 @@
 <noscript>
   <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 </noscript>
-<script src='http://localhost:9001/bigemap.js/v2.1.0/bigemap.js'></script>
+<script src='http://192.168.0.131:9001/bigemap.js/v2.1.0/bigemap.js'></script>
 <script src='do.js'></script>
 <script src='mapId.js'></script>
 <div id="app"></div>
